--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^4.6.0",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
+    "react-activity": "^2.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "4.0.3",
